// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A H4 Element applies normalWeight modifier 1`] = `
<h4
  className="sc-bdVaJa gzDyzB"
>
  Header Element
</h4>
`;

exports[`A H4 Element renders correctly 1`] = `
<h4
  className="sc-bdVaJa dKXqEK"
>
  Header Element
</h4>
`;
